# rh-community-store

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  plugins.json  pyproject.toml  removed.json
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: checks.yaml  generate-rh-data.yml  linting.yaml  upload-plugins.yaml  upload-removed.yaml
scripts/: __init__.py  generate_metadata.py  sort_json.py
scripts/check/: __init__.py  removed.py
tools/jsonschema/: removed.schema.json  repositories.schema.json
